fix inconsistent app-header layout
The header will now appear on all pages, with the layout adjusted
if the audio-overlay is active.

[fixes]
- Uncentered heading text. Caused by default margin value on the `h1`
  element. When the height was too small, it would not longer center the
  text as it used the space to push out margins.

[additions]
- added `.header-bar` layout class in global styles. This allows the
  other components, like the server-selector, to 'fit' into the layout
  of the `app-header`.

--- a/src/app/core/layout/header/header.component.css
+++ b/src/app/core/layout/header/header.component.css
@@ -1,7 +1,10 @@
 header {
   align-content: center;
   background-color: var(--palette-bg-darker);
-  border-bottom: 0.25rem solid var(--palette-accent);
-  min-height: 5rem;
   text-align: center;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
 }
